Расширен функционал: тренировки по видео (дом, зал) на разные части тела Выделен класс Parsing: возвращает ссылку на первое видео с YouTube по введенному запросу Скорректированы тесты